Upgrade Java runtime from 11 to 21 using OpenRewrite
Co-authored-by: Nobuyuki-Inaba <15622039+Nobuyuki-Inaba@users.noreply.github.com>